# parquet-to-clickhouse-schema

./: .#README.md  .gitignore  Cargo.toml  README.md
resources/: arrow.py
src/: lib.rs  parquetutils.rs  parquetvisitor.rs
